--- a/code/Unsupervised Topic Modeling with LDA.ipynb
+++ b/code/Unsupervised Topic Modeling with LDA.ipynb
@@ -860,25 +860,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4871\n",
-      "accuracy: 1.0\n"
+      "775\n",
+      "accuracy: 0.9011627906976745\n"
      ]
     }
    ],
    "source": [
     "num_matched = 0\n",
-    "for i in range(X_train.shape[0]):\n",
-    "    if X_train.iloc[i, 1] in X_train.iloc[i, -1].split(\", \"):\n",
+    "for i in range(X_test.shape[0]):\n",
+    "    if X_test.iloc[i, 1] in X_test.iloc[i, -1].split(\", \"):\n",
     "        num_matched += 1\n",
     "print(num_matched)\n",
-    "print (\"accuracy: {}\".format(num_matched/X_train.shape[0]))"
+    "print (\"accuracy: {}\".format(num_matched/X_test.shape[0]))"
    ]
   }
  ],
