--- a/code/Complaints classification problem based on LDA and Random Forest method.ipynb
+++ b/code/Complaints classification problem based on LDA and Random Forest method.ipynb
@@ -18,7 +18,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import packages"
+    " - <a href='#1'>1. Import packages</a>  \n",
+    " - <a href='#2'>2. Preprocessing</a>\n",
+    " - <a href='#3'>3. LDA</a>\n",
+    " - <a href='#4'>4. Random Forest</a>\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='1'>1. Import packages</a>"
    ]
   },
   {
@@ -50,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing"
+    "## <a id='2'>2. Preprossing</a>"
    ]
   },
   {
@@ -245,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LDA"
+    "## <a id='3'>3. LDA </a>"
    ]
   },
   {
@@ -773,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest "
+    "## <a id='4'>4. Random Forest</a>"
    ]
   },
   {
